==> hathach/tinyusb/hw/bsp/nrf/family.c <==
#include "bsp/board_api.h"
#include "board.h"
#include "nrfx.h"
#include "hal/nrf_gpio.h"
#include "nrfx_gpiote.h"
#include "nrfx_power.h"
#include "nrfx_uarte.h"
#include "nrfx_spim.h"
#include "nrf_sdm.h"
#include "nrf_soc.h"
  #define NRFX_VER 2
  #define NRFX_VER 3

void board_init(void) {
  // stop LF clock just in case we jump from application without reset
  NRF_CLOCK->TASKS_LFCLKSTOP = 1UL;

  // Use Internal OSC to compatible with all boards
  NRF_CLOCK->LFCLKSRC = LFCLK_SRC_RC;
  NRF_CLOCK->TASKS_LFCLKSTART = 1UL;

  // LED
  nrf_gpio_cfg_output(LED_PIN);
  board_led_write(false);

  // Button
  nrf_gpio_cfg_input(BUTTON_PIN, NRF_GPIO_PIN_PULLUP);

#if CFG_TUSB_OS == OPT_OS_NONE
  // 1ms tick timer
  SysTick_Config(SystemCoreClock / 1000);
#elif CFG_TUSB_OS == OPT_OS_ZEPHYR
  #ifdef CONFIG_HAS_HW_NRF_USBREG
  // IRQ_CONNECT(USBREGULATOR_IRQn, DT_IRQ(DT_INST(0, nordic_nrf_clock), priority), nrfx_isr, nrfx_usbreg_irq_handler, 0);
  // irq_enable(USBREGULATOR_IRQn);
  #endif

  /* USB device controller access from devicetree */
  #define DT_DRV_COMPAT nordic_nrf_usbd
  IRQ_CONNECT(DT_INST_IRQN(0), DT_INST_IRQ(0, priority), nrfx_isr, USBD_IRQHandler, 0);
  irq_enable(DT_INST_IRQN(0));
#endif

  // UART
  #if NRFX_VER <= 2
  nrfx_uarte_config_t uart_cfg = {
      .pseltxd   = UART_TX_PIN,
      .pselrxd   = UART_RX_PIN,
      .pselcts   = NRF_UARTE_PSEL_DISCONNECTED,
      .pselrts   = NRF_UARTE_PSEL_DISCONNECTED,
      .p_context = NULL,
      .baudrate  = NRF_UARTE_BAUDRATE_115200, // CFG_BOARD_UART_BAUDRATE
      .interrupt_priority = 7,
      .hal_cfg = {
          .hwfc      = NRF_UARTE_HWFC_DISABLED,
          .parity    = NRF_UARTE_PARITY_EXCLUDED,
      }
  };
  #else
  nrfx_uarte_config_t uart_cfg = {
      .txd_pin   = UART_TX_PIN,
      .rxd_pin   = UART_RX_PIN,
      .rts_pin   = NRF_UARTE_PSEL_DISCONNECTED,
      .cts_pin   = NRF_UARTE_PSEL_DISCONNECTED,
      .p_context = NULL,
      .baudrate  = NRF_UARTE_BAUDRATE_115200, // CFG_BOARD_UART_BAUDRATE
      .interrupt_priority = 7,
      .config = {
          .hwfc      = NRF_UARTE_HWFC_DISABLED,
          .parity    = NRF_UARTE_PARITY_EXCLUDED,
      }
  };
  #endif

  nrfx_uarte_init(&_uart_id, &uart_cfg, NULL);

  //------------- USB -------------//
#if CFG_TUD_ENABLED
  // Priorities 0, 1, 4 (nRF52) are reserved for SoftDevice
  // 2 is highest for application
  NVIC_SetPriority(USBD_IRQn, 2);

  // USB power may already be ready at this time -> no event generated
  // We need to invoke the handler based on the status initially
  uint32_t usb_reg;

#ifdef SOFTDEVICE_PRESENT
  uint8_t sd_en = false;
  sd_softdevice_is_enabled(&sd_en);

  if ( sd_en ) {
    sd_power_usbdetected_enable(true);
    sd_power_usbpwrrdy_enable(true);
    sd_power_usbremoved_enable(true);

    sd_power_usbregstatus_get(&usb_reg);
  }else
#endif
  {
    // Power module init
    const nrfx_power_config_t pwr_cfg = {0};
    nrfx_power_init(&pwr_cfg);

    // Register tusb function as USB power handler
    // cause cast-function-type warning
    const nrfx_power_usbevt_config_t config = {.handler = power_event_handler};
    nrfx_power_usbevt_init(&config);
    nrfx_power_usbevt_enable();

    // USB power may already be ready at this time -> no event generated
    // We need to invoke the handler based on the status initially
#ifdef NRF5340_XXAA
    usb_reg = NRF_USBREGULATOR->USBREGSTATUS;
#else
    usb_reg = NRF_POWER->USBREGSTATUS;
#endif
  }

  if ( usb_reg & VBUSDETECT_Msk ) {
    tusb_hal_nrf_power_event(USB_EVT_DETECTED);
  }
  if ( usb_reg & OUTPUTRDY_Msk  ) {
    tusb_hal_nrf_power_event(USB_EVT_READY);
  }
#endif

#if CFG_TUH_ENABLED && defined(CFG_TUH_MAX3421) && CFG_TUH_MAX3421
  max3421_init();
#endif

}

void board_led_write(bool state) {
  nrf_gpio_pin_write(LED_PIN, state ? LED_STATE_ON : (1 - LED_STATE_ON));
}

int board_uart_write(void const* buf, int len) {
  nrfx_err_t err = nrfx_uarte_tx(&_uart_id, (uint8_t const*) buf, (size_t) len
                                 #if NRFX_VER > 2
                                 ,0
                                 #endif
                                );
  return (NRFX_SUCCESS == err) ? len : 0;
}

static void max3421_init(void) {
  // Somehow pca10056/95 is not working probably due to signal incompatible (1.8V 3v3) with MAC3421E !?

  // manually manage CS
  nrf_gpio_cfg_output(MAX3421_CS_PIN);
  nrf_gpio_pin_write(MAX3421_CS_PIN, 1);

  // USB host using max3421e usb controller via SPI
  nrfx_spim_config_t cfg = {
      .sck_pin        = MAX3421_SCK_PIN,
      .mosi_pin       = MAX3421_MOSI_PIN,
      .miso_pin       = MAX3421_MISO_PIN,
  #if NRFX_VER <= 2
      .ss_pin         = NRFX_SPIM_PIN_NOT_USED,
      .frequency      = NRF_SPIM_FREQ_4M,
  #else
      .ss_pin         = NRF_SPIM_PIN_NOT_CONNECTED,
      .frequency      = 4000000u,
  #endif
      .ss_active_high = false,
      .irq_priority   = 3,
      .orc            = 0xFF,
      // default setting 4 Mhz, Mode 0, MSB first
      .mode           = NRF_SPIM_MODE_0,
      .bit_order      = NRF_SPIM_BIT_ORDER_MSB_FIRST,
      .miso_pull      = NRF_GPIO_PIN_NOPULL,
  };

  // no handler --> blocking
  TU_ASSERT(NRFX_SUCCESS == nrfx_spim_init(&_spi, &cfg, NULL, NULL), );

  // max3421e interrupt pin
  #if NRFX_VER <= 2
  nrfx_gpiote_init(1);
  nrfx_gpiote_in_config_t in_config = NRFX_GPIOTE_CONFIG_IN_SENSE_HITOLO(true);
  in_config.pull = NRF_GPIO_PIN_PULLUP;
  NVIC_SetPriority(GPIOTE_IRQn, 2);
  nrfx_gpiote_in_init(MAX3421_INTR_PIN, &in_config, max3421_int_handler);
  nrfx_gpiote_trigger_enable(MAX3421_INTR_PIN, true);
  #else
  nrf_gpio_pin_pull_t intr_pull = NRF_GPIO_PIN_PULLUP;
  nrfx_gpiote_trigger_config_t intr_trigger = {
      .trigger = NRFX_GPIOTE_TRIGGER_HITOLO,
      .p_in_channel = NULL, // sensing mechanism
  };
  nrfx_gpiote_handler_config_t intr_handler = {
      .handler = max3421_int_handler,
      .p_context = NULL,
  };
  nrfx_gpiote_input_pin_config_t intr_config = {
      .p_pull_config = &intr_pull,
      .p_trigger_config = &intr_trigger,
      .p_handler_config = &intr_handler,
  };

  nrfx_gpiote_init(&_gpiote, 1);
  NVIC_SetPriority(GPIOTE_IRQn, 2);

  nrfx_gpiote_input_configure(&_gpiote, MAX3421_INTR_PIN, &intr_config);
  nrfx_gpiote_trigger_enable(&_gpiote, MAX3421_INTR_PIN, true);
  #endif
}

void tuh_max3421_spi_cs_api(uint8_t rhport, bool active) {
  (void) rhport;
  nrf_gpio_pin_write(MAX3421_CS_PIN, active ? 0 : 1);
}

bool tuh_max3421_spi_xfer_api(uint8_t rhport, uint8_t const* tx_buf, uint8_t* rx_buf, size_t xfer_bytes) {
  (void) rhport;

  nrfx_spim_xfer_desc_t xfer = {
      .p_tx_buffer = tx_buf,
      .tx_length   = tx_buf ? xfer_bytes : 0,
      .p_rx_buffer = rx_buf,
      .rx_length   = rx_buf ? xfer_bytes : 0,
  };

  return nrfx_spim_xfer(&_spi, &xfer, 0) == NRFX_SUCCESS;
}
